ActivitySeervicega clint